# backend/internal/api/dto/update_subscription.go
@@ -1,0 +1,14 @@
+package dto
+
+type UpdateSubscriptionRequest struct {
+	BillingDay uint `json:"billing_day"`
+
+	RouterID uint `json:"router_id"`
+
+	PPPoEUsername string `json:"pppoe_username"`
+	PPPoEPassword string `json:"pppoe_password"`
+
+	Status string `json:"status"`
+
+	Remarks string `json:"remarks"`
+}
